--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
    },
    "repository"     : {
       "type": "git",
-      "url" : "git@gitlab.openi-ict.eu:openi-logger.git"
+      "url" : "git@opensourceprojects.eu/git/p/openi/c60b/ad4e/openi-logger.git"
    },
    "bugs"           : {
       "url": ""
@@ -35,7 +35,6 @@
       "grunt-contrib-concat"   : "",
       "grunt-contrib-uglify"   : "",
       "grunt-istanbul-coverage": "",
-      "grunt-testem"           : "",
       "grunt-qunit-cov"        : "",
       "grunt-plato"            : "",
       "grunt-node-tap"         : "",
