Updated Package.json references for other modules

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
    },
    "repository"     : {
       "type": "git",
-      "url" : "git@opensourceprojects.eu/git/p/openi/c60b/ad4e/openi-logger.git"
+      "url" : "git@github.com:OPENi-ict/openi-logger.git"
    },
    "bugs"           : {
       "url": ""
