--- a/package.json
+++ b/package.json
@@ -1,51 +1,51 @@
 {
-   "name"           : "openi-logger",
-   "description"    : "Logger for the OPENi Cloudlet Platform",
-   "version"        : "0.1.0",
-   "homepage"       : "",
-   "author"         : {
-      "name" : "dmccarthy",
-      "email": "dmccarthy@tssg.org"
-   },
-   "repository"     : {
-      "type": "git",
-      "url" : "git@github.com:OPENi-ict/openi-logger.git"
-   },
-   "bugs"           : {
-      "url": ""
-   },
-   "licenses"       : [
-      {
-         "type": "MIT",
-         "url" : "/blob/master/LICENSE-MIT"
-      }
-   ],
-   "main"           : "lib/main",
-   "engines"        : {
-      "node": ">= 0.8.0"
-   },
-   "scripts"        : {
-      "test": "grunt nodeunit"
-   },
-   "devDependencies": {
-      "grunt-contrib-jshint"   : "~0.6.4",
-      "grunt-contrib-nodeunit" : "~0.2.0",
-      "grunt-contrib-watch"    : "~0.5.3",
-      "grunt-contrib-clean"    : "",
-      "grunt-contrib-concat"   : "",
-      "grunt-contrib-uglify"   : "",
-      "grunt-istanbul-coverage": "",
-      "grunt-qunit-cov"        : "",
-      "grunt-plato"            : "",
-      "grunt-node-tap"         : "",
-      "grunt-istanbul"         : "",
-      "grunt"                  : "~0.4.1",
-      "grunt-config"           : "",
-      "tap"                    : "",
-      "sinon"                  : ""
-   },
-   "dependencies"   : {
-      "winston": ""
-   },
-   "keywords"       : []
+  "name": "openi-logger",
+  "description": "Logger for the OPENi Cloudlet Platform",
+  "version": "0.1.0",
+  "homepage": "",
+  "author": {
+    "name": "dmccarthy",
+    "email": "dmccarthy@tssg.org"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:OPENi-ict/openi-logger.git"
+  },
+  "bugs": {
+    "url": ""
+  },
+  "licenses": [
+    {
+      "type": "MIT",
+      "url": "/blob/master/LICENSE-MIT"
+    }
+  ],
+  "main": "lib/main",
+  "engines": {
+    "node": ">= 0.8.0"
+  },
+  "scripts": {
+    "test": "grunt nodeunit"
+  },
+  "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-config": "",
+    "grunt-contrib-clean": "",
+    "grunt-contrib-concat": "",
+    "grunt-contrib-jshint": "^0.10.0",
+    "grunt-contrib-nodeunit": "~0.2.0",
+    "grunt-contrib-uglify": "",
+    "grunt-contrib-watch": "~0.5.3",
+    "grunt-istanbul": "",
+    "grunt-istanbul-coverage": "",
+    "grunt-node-tap": "",
+    "grunt-plato": "",
+    "grunt-qunit-cov": "",
+    "sinon": "",
+    "tap": ""
+  },
+  "dependencies": {
+    "winston": ""
+  },
+  "keywords": []
 }
