Rebranded to PEAT

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "openi-logger",
-  "description": "Logger for the OPENi Cloudlet Platform",
+  "description": "Logger for the PEAT Cloudlet Platform",
   "version": "0.1.0",
   "homepage": "http://openi-ict.eu",
   "author": {
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:OPENi-ict/openi-logger.git"
+    "url": "git@github.com:peat-platform/openi-logger.git"
   },
   "licenses": [
     {
