--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "peat-logger",
   "description": "Logger for the PEAT Cloudlet Platform",
   "version": "0.1.0",
-  "homepage": "http://openi-ict.eu",
+  "homepage": "http://peat-platform.org",
   "author": {
     "name": "dmccarthy",
     "email": "dmccarthy@tssg.org"
